# open_rgb_client

./: .gitignore  Cargo.toml  README.md  open_rgb_client.service
src/: color_manager.rs  linux.rs  main.rs  windows.rs
