[package]
name = "open_rgb_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
cpu-monitor = "0.1.1"
log = "0.4.16"
log-panics = "2.0.0"
nvml-wrapper = "0.8.0"
openrgb = "0.1.1"
ringbuffer = "0.9.0"
simplelog = "0.12.0"
tokio = { version = "1.17.0", features = ["full"] }
windows-service = "0.5.0"
