[package]
name = "open_rgb_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
cpu-monitor = "0.1.1"
log = "0.4.17"
log-panics = "2.1.0"
nvml-wrapper = "0.9.0"
openrgb = "0.1.2"
ringbuffer = "0.14.2"
simplelog = "0.12.1"
tokio = { version = "1.27.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.6.0"
